# assistme

./: .gitignore  LICENSE  Makefile  README.md  README.ru.md  assistme.py  cli.py  pyproject.toml  requirements.txt  translations.json
assistme/: pyinstaller.py
